# particlefilter

./: .gitignore  CMakeLists.txt  README.md  runTest.sh
src/: constants.h  coords.cpp  coords.h  definitions.cpp  definitions.h  mathtoolbox.cpp  mathtoolbox.h  particlefilter.cpp  particlefilter.h  platform.cpp  platform.h  playingfield.cpp  playingfield.h  types.h  visiondefinitions.cpp  visiondefinitions.h
test/: locatest.cpp  logdataprocessor.hpp
test/LogFileVizualizer/: Constants.py  Definitions.py  LogFile.py  Vision.py  WorldModelViewerGui.py  Worldmodel.py  data.raw  vizualizer.py
test/LogFileVizualizer/images/: playing_field_640x468.xcf
